# mem0-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/mem0_mcp/: __init__.py  __main__.py  server.py
