[project]
name = "mem0-mcp"
version = "0.1.0"
description = "MCP server for self-hosted Mem0 with Qdrant vector + Neo4j graph memory"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Justin Tieu", email = "justin@tensakulabs.com" }]
keywords = ["mem0", "mcp", "llm", "qdrant", "neo4j", "memory", "self-hosted"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27",
    "neo4j>=5.0",
]

[project.scripts]
mem0-mcp = "mem0_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
